Wed Sep  3 09:10:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bound_Ptr_Test.cpp:
          Don't use ACE_ASSERT, it is disabled in release mode and this test
          had some real functionality placed within an ACE_ASSERT. This fixes
          bugzilla 3415

Tue Sep  2 14:11:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/acedefaults.mpb:
          Don't use ACE_LIB_TEXT but ACE_TEXT, the former has been deprecated
          a long time ago

Thu Aug 28 21:18:11 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:

          Removed "Exceptions" and "NO_EXCEPTIONS" as -Config options.

Thu Aug 28 18:33:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Improved prompt matching

Thu Aug 28 13:04:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          The error when we can't chdir to a directory was confusing

        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Reduced duplicate code and added support for ACE_RUN_VX_STARTUP_SCRIPT
          and ACE_RUN_VX_STARTUP_SCRIPT_ROOT with which we can specify a
          startup script that is executed before the real application is started

        * bin/PerlACE/TestTarget_VxWorks.pm:
          A VxWorks target has to be rebooted between tests

Mon Aug 25 11:15:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Added missing run_test.pl to the OBV/Typed_Events test

Thu Aug 21 09:38:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Added OpenSuSE build services as new rpm download location.
          Removed ACE-install.sh reference, it is not part of the
          archive anymore
